--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "taichi-splatting"  
-version = "3.0.0"  
+version = "0.0.2"  
 description = "A Taichi Gaussian Splatting library"  
 readme = "README.md" 
 requires-python = ">=3.10"
@@ -23,6 +23,10 @@ dependencies = [
 [build-system]
 requires = ["setuptools>=43.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
+
+
+[project.scripts]  # Optional
+fit_image_gaussians = "taichi_splatting.scripts.fit_image_gaussians:main"
 
 [tool.ruff]
 indent-width = 2
