--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "taichi-splatting"  
-version = "0.0.2"  
+version = "0.1.0"  
 description = "A Taichi Gaussian Splatting library"  
 readme = "README.md" 
 requires-python = ">=3.10"
@@ -12,7 +12,7 @@ maintainers = [
 
 dependencies = [
   "beartype", 
-  "taichi", 
+  #"taichi", 
   "tqdm", 
   "tensordict"
 ]
