--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,8 @@ dependency_links = ["https://pypi.taichi.graphics/simple/"]
 fit_image_gaussians = "taichi_splatting.scripts.fit_image_gaussians:main"
 bench_projection = "taichi_splatting.benchmarks.bench_projection:main"
 bench_rasterizer = "taichi_splatting.benchmarks.bench_rasterizer:main"
+bench_tilemapper = "taichi_splatting.benchmarks.bench_tilemapper:main"
+
 bench_sh = "taichi_splatting.benchmarks.bench_sh:main"
 
 [tool.ruff]
